--- a/miss-accountant/src/main/resources/templates/debt/set.html
+++ b/miss-accountant/src/main/resources/templates/debt/set.html
@@ -10,18 +10,18 @@
 <body>
 <div class="login-form">
     <form method="post">
-        <input type="hidden" id="userId" name="userId" th:value="${userId}">
-        <input type="hidden" id="groupId" name="groupId" th:value="${groupId}">
+        <input type="hidden" id="userId" name="userId">
+        <input type="hidden" id="groupId" name="groupId">
         <div class="form-area">
             <div class="group">
                 <label>
                     <input type="checkbox" class="select-all"/>
                     <span>All</span>
                 </label>
-                <label th:each="account:${accounts}">
-                    <input type="checkbox" name="userIds" th:value="${account.userId}"/>
-                    <span th:text="${account.name}"></span>
-                </label>
+                <!--                <label th:each="account:${accounts}">-->
+                <!--                    <input type="checkbox" name="userIds" th:value="${account.userId}"/>-->
+                <!--                    <span th:text="${account.name}"></span>-->
+                <!--                </label>-->
             </div>
             <div class="group">
                 <input type="number" pattern="[0-9]*" class="form-control" placeholder="每人金額" id="amount" name="amount"
@@ -36,21 +36,39 @@
         </div>
     </form>
 </div>
-<script src="/static/js/jquery.min.js"></script>
-<script>
 
-    function setButtonText() {
-        $("p").text("送出");
-        $("p").show(1);
-    }
+<script src="https://d.line-scdn.net/liff/1.0/sdk.js"></script>
+<script src="/static/js/jquery.min.js"></script>
+<script type="text/javascript">
+    var event = new Event('input');
+    $("#groupId").bind('input', function () {
+        $.ajax({
+            url: "/debt/getAccount",
+            type: "POST",
+            data: $("form").serialize(),
+            dataType: "json",
+            error: function (err) {
+                console.log(err);
+            },
+            success: function (result) {
+                console.log(result);
+                $('#userId').val(result);
+                result.forEach(setAccountButton);
+            }
+        });
+    });
+
+    liff.init(function (data) {
+        $('#userId').val(data.context.userId);
+        $('#groupId').val(data.context.groupId);
+        $('#groupId').trigger("input");
+    });
 
     $(".submit").click(function () {
-        $("form");
-        var form = $("form");
         $.ajax({
             url: "/debt/add",
             type: "POST",
-            data: form.serialize(),
+            data: $("form").serialize(),
             dataType: "json",
             error: function (err) {
                 console.log(err);
@@ -65,6 +83,16 @@
             }
         });
     });
+
+    function setButtonText() {
+        $("p").text("送出");
+        $("p").show(1);
+    }
+
+    function setAccountButton(item, index) {
+        $("label:last").after("<label><input type='checkbox' name='userIds' value='" + item.userId + "'/><span>" +  item.name + "</span></label>")
+        console.log(item);
+    }
 
     $(".select-all").click(function () {
         if ($(".select-all").prop("checked")) $("input[type='checkbox']").prop("checked", true);
