--- a/miss-accountant/src/main/resources/static/css/list.css
+++ b/miss-accountant/src/main/resources/static/css/list.css
@@ -21,3 +21,12 @@ Customizal Css
 .td-10 {
     width: 10%;
 }
+
+.btn {
+    padding: 6px;
+    font-size: 5px;
+}
+
+.btn .fa {
+    margin-right: 0px;
+}
