--- a/miss-accountant/src/main/resources/templates/debt/list.html
+++ b/miss-accountant/src/main/resources/templates/debt/list.html
@@ -13,6 +13,7 @@
     <form method="post">
         <input type="hidden" id="userId" name="userId">
         <input type="hidden" id="groupId" name="groupId">
+        <input type="hidden" id="debtId" name="debtId">
     </form>
         <div class="row">
             <!-- Start Panel -->
@@ -23,13 +24,13 @@
                         <table class="table table-hover">
                             <thead>
                             <tr>
-                                <td class="td-30">債權人</td>
+                                <td class="td-30">債權人/債務人</td>
                                 <td class="td-30">項目</td>
                                 <td class="td-30">金額</td>
                                 <td class="td-10">功能</td>
                             </tr>
                             </thead>
-                            <tbody><tr><td class="td-30">豪</td><td class="td-30">食材</td><td class="td-30">55455</td><td><button>刪除</button></td></tr>
+                            <tbody><tr><td class="td-30">豪</td><td class="td-30">食材</td><td class="td-30">55455</td><td><button type="button" class="btn btn-default btn-block submit btn-delete" id="17"><i class="fa fa-trash"></i></button></td></tr>
                             </tbody>
                         </table>
                         <!--                        <? if($pagination):?><ul class="pagination"><?=$pagination?></ul><? endif;?>-->
@@ -56,18 +57,61 @@
             success: function (result) {
                 $('#userId').val(result);
                 result.forEach(setDebtList);
+                bindDeleteClick();
             }
         });
     });
 
+    // $('#userId').val('U2c7bf3adc48f992cccb81b7fb1832c16');
+    // $('#groupId').val('Ca31b28a1afa222c68b80b4f400ae9c97');
+    // $('#groupId').trigger("input");
     liff.init(function (data) {
         $('#userId').val(data.context.userId);
         $('#groupId').val(data.context.groupId);
         $('#groupId').trigger("input");
     });
 
+    $(".btn-delete").bind('click', function () {
+        $('#debtId').val($(this).attr('id'));
+
+        $.ajax({
+            url: "/debt/delete",
+            type: "POST",
+            data: $("form").serialize(),
+            dataType: "json",
+            error: function (err) {
+                console.log(err);
+            },
+            success: function (result) {
+                console.log(result);
+            }
+        });
+    });
+
     function setDebtList(item, index) {
-        $("tbody:last").append("<tr><td class='td-30'>" + item.name + "</td><td class='td-30'>" + item.note + "</td><td class='td-30'>" + item.amount + "</td></tr>")
+        let td = "<td class='td-30'>" + item.name + "</td><td class='td-30'>" + item.note + "</td><td class='td-30'>" + item.amount + "</td>";
+        if (item.isOwner === 1) td = td + "<td><button type='button' class='btn btn-default btn-block btn-delete' id='" + item.id + "'><i class='fa fa-trash submit' ></i></button></td>"
+        $("tbody:last").append("<tr>" + td + "</tr>");
+    }
+
+    function bindDeleteClick() {
+        $(".btn-delete").bind('click', function () {
+            var id = $(this).attr('id');
+            $('#debtId').val($(this).attr('id'));
+
+            $.ajax({
+                url: "/debt/delete",
+                type: "POST",
+                data: $("form").serialize(),
+                dataType: "json",
+                error: function (err) {
+                    console.log(err);
+                },
+                success: function (result) {
+                    $("#" + id).parent().parent().fadeOut(500);
+                }
+            });
+        });
     }
 </script>
 </body>
