--- a/miss-accountant/src/main/resources/templates/debt/list.html
+++ b/miss-accountant/src/main/resources/templates/debt/list.html
@@ -20,7 +20,6 @@
             <div class="col-md-12">
                 <div class="panel panel-default">
                     <div class="panel-body table-responsive">
-                        <!--                        <? if($pagination):?><ul class="pagination"><?=$pagination?></ul><? endif;?>-->
                         <table class="table table-hover">
                             <thead>
                             <tr>
@@ -30,10 +29,10 @@
                                 <td class="td-10">功能</td>
                             </tr>
                             </thead>
-                            <tbody><tr><td class="td-30">豪</td><td class="td-30">食材</td><td class="td-30">55455</td><td><button type="button" class="btn btn-default btn-block submit btn-delete" id="17"><i class="fa fa-trash"></i></button></td></tr>
+                            <tbody>
+<!--                            <tr><td class="td-30">豪</td><td class="td-30">食材</td><td class="td-30">55455</td><td><button type="button" class="btn btn-default btn-block submit btn-delete" id="17"><i class="fa fa-trash"></i></button></td></tr>-->
                             </tbody>
                         </table>
-                        <!--                        <? if($pagination):?><ul class="pagination"><?=$pagination?></ul><? endif;?>-->
                     </div>
                 </div>
             </div>
