--- a/miss-accountant/src/main/resources/templates/debt/add.html
+++ b/miss-accountant/src/main/resources/templates/debt/add.html
@@ -56,6 +56,7 @@
     liff.init(function (data) {
         $('#userId').val(data.context.userId);
         $('#groupId').val(data.context.groupId);
+        if (data.context.userId) alert("請用手機版Line開啟");
         liff.getProfile().then(function (profile) {
             $('#name').val(profile.displayName);
             $('#groupId').trigger("input");
