--- a/miss-accountant/src/main/resources/templates/debt/list.html
+++ b/miss-accountant/src/main/resources/templates/debt/list.html
@@ -64,10 +64,13 @@
     // $('#userId').val('U2c7bf3adc48f992cccb81b7fb1832c16');
     // $('#groupId').val('Ca31b28a1afa222c68b80b4f400ae9c97');
     // $('#groupId').trigger("input");
+
+    var isInClient = liff.isInClient();
+    if (!isInClient) {alert("請用手機版Line開啟");
+
     liff.init(function (data) {
         $('#userId').val(data.context.userId);
         $('#groupId').val(data.context.groupId);
-        if ($('#userId').val().length === 0 || !$('#userId').val().trim()) alert("請用手機版Line開啟");
         $('#groupId').trigger("input");
     });
 
