--- a/miss-accountant/src/main/resources/templates/debt/list.html
+++ b/miss-accountant/src/main/resources/templates/debt/list.html
@@ -66,7 +66,7 @@
     // $('#groupId').trigger("input");
 
     var isInClient = liff.isInClient();
-    if (!isInClient) {alert("請用手機版Line開啟");
+    if (!isInClient) alert("請用手機版Line開啟");
 
     liff.init(function (data) {
         $('#userId').val(data.context.userId);
