--- a/miss-accountant/src/main/resources/templates/index.html
+++ b/miss-accountant/src/main/resources/templates/index.html
@@ -1,6 +1,6 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>啟用帳號</title>
+    <title>Unuse</title>
 </head>
 
 <body>
