--- a/miss-accountant/src/main/resources/templates/debt/add.html
+++ b/miss-accountant/src/main/resources/templates/debt/add.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -40,7 +40,7 @@
     var event = new Event('input');
     $("#groupId").bind('input', function () {
         $.ajax({
-            url: "/debt/getAccount",
+            url: "/account/group",
             type: "POST",
             data: $("form").serialize(),
             dataType: "json",
