--- a/miss-accountant/src/main/resources/templates/debt/list.html
+++ b/miss-accountant/src/main/resources/templates/debt/list.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -46,7 +46,7 @@
     var event = new Event('input');
     $("#groupId").bind('input', function () {
         $.ajax({
-            url: "/debt/getList",
+            url: "/debt/list",
             type: "POST",
             data: $("form").serialize(),
             dataType: "json",
