Revert "-Add dto and openAPI."
This reverts commit 60cc9be4683bbbed6111ce1afde2ef9e7aec979d.

--- a/miss-accountant/src/main/resources/templates/debt/add.html
+++ b/miss-accountant/src/main/resources/templates/debt/add.html
@@ -41,7 +41,7 @@
     $("#groupId").bind('input', function () {
         $.ajax({
             url: "/account/group",
-            type: "GET",
+            type: "POST",
             data: $("form").serialize(),
             dataType: "json",
             error: function (err) {
